<resources>
    <string name="alert_title_poor_network">网络不佳</string>
    <string name="alert_message_poor_network">您当前的网络情况不佳，请稍后再次尝试。</string>
    <string name="alert_title_network_type">网络类型</string>
    <string name="alert_message_network_type">本软件仅支持NET接入，在您的APN列表中发现有合适的项，可以手动切换到NET网络继续使用。</string>
    <string name="alert_title_error_login">自动登录失败</string>
    <string name="alert_message_error_login">请手动登录。</string>
    <string name="check_version">检查版本...</string>
    <string name="check_property">检查配置...</string>
    <string name="auto_login">自动登录...</string>
    <string name="cost_hint_message">本软件在使用过程中，会产生流量费用，该费用由运营商收取。点击确定开始使用。</string>
    <string name="no_show_again">下次不再提示</string>
    <string name="add_shortcut_dialog_success">添加桌面快捷方式成功</string>
    <string name="add_shortcut_dialog_title">添加桌面快捷方式</string>
    <string name="add_shortcut_dialog_message">添加快捷方式到桌面，随身购物更便捷！</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="add">添加</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="operation_option">操作</string>
    <string name="background">后台更新</string>
    <string name="server_busy">服务器忙，请稍后重试。</string>
    <string name="alert_title_poor_network2">网络不佳</string>
    <string name="alert_message_poor_network2">网络不佳，可选择重试，或者取消。</string>
    <string name="retry">重试</string>
    <string name="back">返回</string>
    <string name="software_need_update_msg">目前有新版本，是否升级？</string>
    <string name="software_must_update_msg">您所使用版本太低，请点击确定升级</string>
    <string name="voice_search_title">语音识别</string>
    <string name="voice_search_please_choose">您是不是要找：</string>
    <string name="voice_search_message_hint">抱歉，您的手机不支持语音识别功能</string>
    <string name="barcode_title">条码购</string>
    <string name="clear_record">清空记录</string>
    <string name="alert_title_barcode_clear">清空记录</string>
    <string name="alert_message_barcode_clear">确认清空扫描纪录？</string>
    <string name="alert_message_no_scan">抱歉，此机型暂不支持通过摄像头进行条码扫描，请手动输入条码。</string>
    <string name="barcode_welcome_text">您可以通过扫描或手动输入商品条码，搜索该商品在京东商城的价格和详细信息。</string>
    <string name="barcode_input_button">输入条码</string>
    <string name="barcode_scan_button">扫描条码</string>
    <string name="barcode_scan_history_no">暂无扫描记录</string>
    <string name="barcode_scan_history_label">扫描记录：</string>
    <string name="barcode_no_data">暂无与此条码相关商品记录</string>
    <string name="barcode_input_label">请输入条码：</string>
    <string name="barcode_input_tip_empty">请输入条码</string>
    <string name="barcode_input_tip_illegal">条码格式有误</string>
    <string name="menu_barcode">条码购</string>
    <string name="menu_easy">轻松购</string>
    <string name="menu_search">搜索</string>
    <string name="menu_setup">设置</string>
    <string name="menu_setup_no_image_title">节省流量设置</string>
    <string name="menu_setup_message_title">站内消息设置</string>
    <string name="menu_history">浏览记录</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_other">其它</string>
    <string name="menu_about">关于</string>
    <string name="menu_help">帮助</string>
    <string name="menu_exit">退出</string>
    <string name="app_name">京东商城</string>
    <string name="homeActivity_autoComplete">商品搜索</string>
    <string name="home_crazy_text">疯狂抢购</string>
    <string name="jdnews_text">京东快报</string>
    <string name="jdnews_detail">快报详情</string>
    <string name="categoryText">全部分类</string>
    <string name="product_jd_price">京东价：￥</string>
    <string name="product_market_price">市场价：</string>
    <string name="product_detail">商品详情</string>
    <string name="product_detail_id">商品编号：</string>
    <string name="product_detail_info">产品信息</string>
    <string name="product_color">颜色：</string>
    <string name="product_size">尺寸：</string>
    <string name="product_stock">库存：</string>
    <string name="select_province">请选择地区</string>
    <string name="product_detail_packs">优惠套装</string>
    <string name="product_comment">商品评论</string>
    <string name="product_consultation_count">购买咨询</string>
    <string name="product_collect_must_login">使用收藏功能需要先进行登录</string>
    <string name="product_province_beijing">北京</string>
    <string name="alert_message_no_camera">对不起，您的机型无摄像头，不能进行拍照。</string>
    <string name="gift_label">赠品：</string>
    <string name="comment_reply">回复评论</string>
    <string name="comment_list">评论</string>
    <string name="product_no_comment_hint">暂无评价！</string>
    <string name="product_no_discuss_hint">暂无晒单帖！</string>
    <string name="comment_list_all">全部评论</string>
    <string name="comment_list_g">好评</string>
    <string name="comment_list_c">中评</string>
    <string name="comment_list_b">差评</string>
    <string name="comment_list_pros">优点：</string>
    <string name="comment_list_cons">缺点：</string>
    <string name="comment_list_content">使用心得：</string>
    <string name="comment_list_add_comment">添加新评论</string>
    <string name="product_order_comment_count">晒单讨论</string>
    <string name="comment_list_reply">回复</string>
    <string name="user_name">用户名：</string>
    <string name="user_password">密码：</string>
    <string name="login_failed_title">登录失败</string>
    <string name="login_data_error">您输入的用户名或者密码错误</string>
    <string name="login_failed_message">登录失败: 用户名或密码错误</string>
    <string name="login_user_name_hint">请输入用户名</string>
    <string name="login_user_password_hint">请输入密码</string>
    <string name="user_name_hint">请输入用户名，长度在4-20个字之间,由中文，字母，数字，\"_\"，\"-\"组成</string>
    <string name="user_password_hint">请输入密码，长度在6-16个字之间，由字母，数字，\"_\"，\"-\"组成</string>
    <string name="remember_user">记住我</string>
    <string name="register">注册</string>
    <string name="dialog_register_error">错误</string>
    <string name="new_user_register">新用户注册</string>
    <string name="login">登 录</string>
    <string name="register_name_hint">请输入用户名</string>
    <string name="register_mail_addr">请输入邮箱地址</string>
    <string name="register_first_password">请输入密码</string>
    <string name="register_second_password">再输一次密码</string>
    <string name="register_error_no_service">用户名或者邮箱已被注册，请重新输入</string>
    <string name="register_err_busy">服务器正忙，请稍后再试...</string>
    <string name="password_again">请再一次输入您的密码</string>
    <string name="password_not_same">您输入的密码不一致，请重新输入</string>
    <string name="not_mail_format">您输入的邮箱格式不正确，请验证</string>
    <string name="available_use">可以使用</string>
    <string name="name_common">用户名</string>
    <string name="register_alert_title">提示</string>
    <string name="register_alert_ok_button_text">确定</string>
    <string name="demanding">查询中...</string>
    <string name="loading">加载中...</string>
    <string name="no_image">暂无图片</string>
    <string name="register_success">注册成功</string>
    <string name="register_mail_addr_text">邮箱:</string>
    <string name="register_confirm_password">确认密码:</string>
    <string name="show_password">显示密码</string>
    <string name="accept_agreement">同意，</string>
    <string name="show_agreement">注册协议</string>
    <string name="score">积分:</string>
    <string name="left_balance">余额:</string>
    <string name="left_balance2">余额</string>
    <string name="guess_taste">猜你喜欢</string>
    <string name="my_order">我的订单</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_discuss">晒单/评价</string>
    <string name="my_message">站内消息</string>
    <string name="my_no_class">游客</string>
    <string name="hello">您好！</string>
    <string name="default_balance">0.0</string>
    <string name="order_bumber">订单号:</string>
    <string name="total_value">总价:</string>
    <string name="submit_time">下单时间:</string>
    <string name="comment_discuss_list">晒单/讨论</string>
    <string name="new_comment_discuss">发表</string>
    <string name="new_buy_ask">提交</string>
    <string name="comment_answer">咨询回复</string>
    <string name="cost_count">降价通知</string>
    <string name="get_by_self">自提提醒</string>
    <string name="product_num_out">您购买的商品已达50种，一次性购买不能超过50种商品</string>
    <string name="alert_message_canot_buy">请到网站购买此商品，移动终端暂不支持</string>
    <string name="product_canot_easy_buy">此商品暂时不能轻松购</string>
    <string name="product_no_stock">没有库存，不能加入购物车</string>
    <string name="product_canot_add_to_car">不能加入购物车，请选择其他商品</string>
    <string name="sort_button_price">价格</string>
    <string name="sort_button_sell">销量</string>
    <string name="sort_button_relative">相关度</string>
    <string name="sort_button_time">上架时间</string>
    <string name="product_goto_detail">查看商品详情</string>
    <string name="product_add_to_car">加入购物车</string>
    <string name="product_add_title">添加成功！</string>
    <string name="product_add_message">商品已成功加入购物车</string>
    <string name="product_add_positive">去结算</string>
    <string name="product_add_negative">再逛逛</string>
    <string name="product_no_data">没有商品</string>
    <string name="product_easy_buy">轻松购</string>
    <string name="product_detail_info_branch_intro">商品介绍</string>
    <string name="product_detail_info_branch_guig">规格参数</string>
    <string name="product_detail_info_branch_qingd">包装清单</string>
    <string name="product_detail_info_branch_shouh">售后服务</string>
    <string name="book_detail_branch_basic">基本信息</string>
    <string name="book_detail_branch_content">内容简介</string>
    <string name="book_detail_branch_directory">目录</string>
    <string name="no_data">暂无数据</string>
    <string name="take_photo">拍摄</string>
    <string name="camera">相机</string>
    <string name="send_success">发表成功！</string>
    <string name="send_consultation_success">咨询提交成功，请等待管理员处理。</string>
    <string name="send_failed">发表失败！</string>
    <string name="pg_more_ware_history">浏览记录</string>
    <string name="pg_more_clean_history">清空记录</string>
    <string name="pg_more_clean_history_confrim_string">确认清空浏览记录？</string>
    <string name="pg_more_search">搜索</string>
    <string name="pg_new_feedback_type">反馈类型：</string>
    <string name="pg_new_feedback_type_text_hint">请选择</string>
    <string name="pg_new_feedback_content">反馈内容：</string>
    <string name="pg_new_feedback_contact">联系方式：</string>
    <string name="pg_new_feedback_contact_hint">您的姓名、手机号、邮箱等</string>
    <string name="comment_grade">评分:</string>
    <string name="comment_good">优点:</string>
    <string name="comment_bad">缺点:</string>
    <string name="comment_idea">使用心得:</string>
    <string name="comment_title_name">标题:</string>
    <string name="comment_good_hint">东西很好哦</string>
    <string name="comment_bad_hint">暂时还没有发现缺点哦！</string>
    <string name="no_image_switch_title">无图版</string>
    <string name="no_image_switch_summary_on">无图版已启用</string>
    <string name="no_image_switch_summary_off">无图版已关闭</string>
    <string name="no_image_switch_key">no_image_switch</string>
    <string name="msg_auto_update_switch_title">消息更新</string>
    <string name="msg_auto_update_switch_key">msg_auto_update_switch</string>
    <string name="msg_auto_update_switch_summary_on">开启消息自动更新</string>
    <string name="msg_auto_update_switch_summary_off">关闭消息自动更新</string>
    <string name="msg_auto_update_frequency_title">消息更新频率</string>
    <string name="msg_auto_update_frequency_key">msg_auto_update_frequency</string>
    <string name="msg_auto_update_frequency_summary">设置消息自动更新的时间周期</string>
    <string name="app_error_submit">提交</string>
    <string name="app_error_close">关闭</string>
    <string name="app_error_tag_des">您可以对出错情况进行简单描述并提交错误报告，以便我们修复完善。</string>
    <string name="app_error_tag_hint">请对错误信息进行描述(可不填)</string>
    <string name="app_error_checkbox">提交后重启</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
</resources>