<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/android_layout_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/common_title" layout="@layout/title" />
    <ScrollView android:id="@id/regist_scroller" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/common_title">
        <RelativeLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:id="@id/register_name_text" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/user_name" />
            <EditText android:id="@id/register_name" android:background="@drawable/edit_text_x" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/register_name_hint" android:singleLine="true" android:layout_toRightOf="@id/register_name_text" android:layout_alignTop="@id/register_name_text" />
            <TextView android:id="@id/register_mail_text" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/register_mail_addr_text" android:layout_below="@id/register_name_text" />
            <EditText android:id="@id/register_mail" android:background="@drawable/edit_text_x" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/register_mail_addr" android:singleLine="true" android:layout_toRightOf="@id/register_mail_text" android:layout_below="@id/register_name" android:layout_alignLeft="@id/register_name" android:layout_alignTop="@id/register_mail_text" />
            <TextView android:id="@id/register_first_password_text" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/user_password" android:layout_below="@id/register_mail_text" />
            <EditText android:id="@id/register_first_password_hint" android:background="@drawable/edit_text_x" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/register_first_password" android:password="true" android:singleLine="true" android:layout_toRightOf="@id/register_first_password_text" android:layout_below="@id/register_mail" android:layout_alignLeft="@id/register_name" android:layout_alignTop="@id/register_first_password_text" />
            <TextView android:id="@id/register_second_password_text" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/register_confirm_password" android:layout_below="@id/register_first_password_text" />
            <EditText android:id="@id/register_second_password_hint" android:background="@drawable/edit_text_x" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/register_second_password" android:password="true" android:singleLine="true" android:layout_toRightOf="@id/register_second_password_text" android:layout_below="@id/register_first_password_hint" android:layout_alignLeft="@id/register_name" android:layout_alignTop="@id/register_second_password_text" />
            <CheckBox android:id="@id/show_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:button="@drawable/login_remember" android:text="@string/show_password" android:layout_below="@id/register_second_password_hint" android:layout_alignLeft="@id/register_name" />
            <CheckBox android:id="@id/accept_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:checked="true" android:button="@drawable/login_remember" android:text="@string/accept_agreement" android:layout_below="@id/show_password" android:layout_alignLeft="@id/register_name" />
            <TextView android:textSize="16.0dip" android:textStyle="bold" android:id="@id/show_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="17.0dip" android:text="@string/show_agreement" android:layout_toRightOf="@id/accept_agreement" android:layout_below="@id/show_password" />
            <Button android:textSize="20.0sp" android:id="@id/register_top" android:layout_width="150.0dip" android:layout_marginTop="10.0dip" android:adjustViewBounds="true" android:text="@string/register" android:layout_below="@id/accept_agreement" android:layout_alignLeft="@id/register_name" style="@style/common_button" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
