<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/android_layout_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/common_title" layout="@layout/title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/common_title" android:fadeScrollbars="true">
        <RelativeLayout android:gravity="fill_vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="15.0dip" android:id="@id/comment_title_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/comment_title_name" />
            <EditText android:textSize="15.0dip" android:id="@id/comment_title_name_content" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_below="@id/comment_title_name" style="@style/edit_text" />
            <TextView android:textSize="15.0dip" android:id="@id/comment_grade" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/comment_grade" android:layout_below="@id/comment_title_name_content" android:layout_centerVertical="true" />
            <RatingBar android:id="@id/comment_grade_star" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:rating="5.0" android:layout_toRightOf="@id/comment_grade" android:layout_below="@id/comment_title_name_content" style="@style/yellowStarRatingBar" />
            <TextView android:textSize="15.0dip" android:id="@id/comment_good" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/comment_good" android:layout_below="@id/comment_grade" android:layout_centerVertical="true" />
            <EditText android:textSize="15.0dip" android:id="@id/comment_good_content" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/comment_good_hint" android:singleLine="true" android:layout_below="@id/comment_good" style="@style/edit_text" />
            <TextView android:textSize="15.0dip" android:id="@id/comment_bad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/comment_bad" android:layout_below="@id/comment_good_content" android:layout_centerVertical="true" />
            <EditText android:textSize="15.0dip" android:id="@id/comment_bad_content" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/comment_bad_hint" android:singleLine="true" android:layout_below="@id/comment_bad" android:layout_centerVertical="true" android:isScrollContainer="true" style="@style/edit_text" />
            <TextView android:textSize="15.0dip" android:id="@id/use_experience" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/comment_idea" android:layout_below="@id/comment_bad_content" android:layout_centerVertical="true" />
            <EditText android:textSize="15.0dip" android:gravity="top" android:id="@id/use_experience_content" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lines="5" android:layout_below="@id/use_experience" android:layout_centerVertical="true" android:isScrollContainer="true" style="@style/edit_text" />
            <Button android:textSize="15.0dip" android:id="@id/send_comment" android:layout_width="150.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/new_buy_ask" android:layout_below="@id/use_experience_content" android:layout_centerInParent="true" style="@style/common_button" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
