<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/android_layout_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/common_title" layout="@layout/title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/common_title" android:fadeScrollbars="true">
        <RelativeLayout android:gravity="fill_vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="18.0sp" android:id="@id/feedback_type_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/pg_new_feedback_type" android:layout_alignParentTop="true" />
            <LinearLayout android:id="@id/feedback_type" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_toRightOf="@id/feedback_type_text" android:layout_alignParentTop="true">
                <TextView android:gravity="center" android:layout_gravity="right" android:id="@id/feedback_choosed_type" android:paddingLeft="5.0dip" android:layout_width="150.0dip" android:layout_height="wrap_content" android:hint="@string/pg_new_feedback_type_text_hint" style="@style/spinner_left" />
                <ImageButton android:layout_gravity="right" android:id="@id/feedback_choosed_type_btn" android:background="@drawable/android_spinner_right_x" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView android:textSize="18.0sp" android:id="@id/feedback_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/pg_new_feedback_content" android:layout_below="@id/feedback_type" android:layout_centerVertical="true" />
            <EditText android:gravity="top" android:id="@id/feedback_content" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lines="5" android:layout_below="@id/feedback_text" android:layout_centerVertical="true" android:isScrollContainer="true" style="@style/edit_text" />
            <TextView android:textSize="18.0sp" android:id="@id/feedback_contact" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/pg_new_feedback_contact" android:layout_below="@id/feedback_content" android:layout_centerVertical="true" />
            <EditText android:id="@id/feedback_contact_content" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/pg_new_feedback_contact_hint" android:layout_below="@id/feedback_contact" style="@style/edit_text" />
            <Button android:id="@id/send_feedback" android:layout_width="150.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/new_buy_ask" android:layout_below="@id/feedback_contact_content" android:layout_centerInParent="true" style="@style/common_button" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
