<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/common_title" layout="@layout/title" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/barcode_input_label" />
    <EditText android:id="@id/barcode_input_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:numeric="integer" style="@style/edit_text" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <Button android:id="@id/barcode_input_ok" android:layout_width="138.0dip" android:text="@string/ok" style="@style/common_button" />
        </RelativeLayout>
        <RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <Button android:id="@id/barcode_input_cancel" android:layout_width="138.0dip" android:layout_marginLeft="10.0dip" android:text="@string/cancel" style="@style/common_button" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
